<resources>
    <string name="app_name">AjoHearResp</string>
    <string name="measure_respiratory_rate">MEASURE RESPIRATORY RATE</string>
    <string name="measure_heart_rate">MEASURE HEART RATE</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="resp_rate">Resp Rate:</string>
    <string name="press_symptoms_button_to_enter_symptoms">Press SYMPTOMS to enter symptoms</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="press_upload_to_send_data_for_evaluaiton">Press UPLOAD to send data for evaluation</string>
    <string name="upload">UPLOAD</string>
    <string name="symptoms_logging_page">Symptoms Logging Page</string>
    <string name="submit">SUBMIT</string>
    <string name="select_each_symptom_and_rate_severity">Select each symptom and rate severity</string>
    <string name="startlocation">StartLocation</string>
    <string-array name="symptoms_array">
        <item>Nausea</item>
        <item>Headache</item>
        <item>Diarrhea</item>
        <item>Soar Throat</item>
        <item>Fever</item>
        <item>Muscle Ache</item>
        <item>Loss of Smell or Taste</item>
        <item>Cough</item>
        <item>Shortness of Breath</item>
        <item>Feeling Tired</item>
    </string-array>
</resources>