<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MonitorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/RespHeartLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SymptomsMapper">

        <Button
            android:id="@+id/respRateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_respiratory_rate" />

        <LinearLayout
            android:id="@+id/RespRateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardview_default_elevation"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-3dp"
            tools:layout_editor_absoluteY="481dp">

            <TextView
                android:id="@+id/RespRateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resp_rate"
                tools:text="@string/resp_rate" />

            <TextView
                android:id="@+id/RespRateData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:text="0.00000"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/heartRateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_heart_rate" />

        <LinearLayout
            android:id="@+id/HeartRateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HeartRateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heart_rate" />

            <TextView
                android:id="@+id/HeartRateData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="0.00000"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/cameraLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toTopOf="@+id/RespHeartLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SymptomsMapper">

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/SymptomsMapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cameraLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/SymptomsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SymtomsLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="start"
                android:text="@string/press_symptoms_button_to_enter_symptoms" />

            <Button
                android:id="@+id/SymptomsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/symptoms" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UploadDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/press_upload_to_send_data_for_evaluaiton" />

            <Button
                android:id="@+id/UPLOAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upload" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/MapButton"
        android:layout_width="135dp"
        android:layout_height="53dp"
        android:text="GO MAP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RespHeartLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>